--- a/cloudstorage/src/main/resources/templates/signup.html
+++ b/cloudstorage/src/main/resources/templates/signup.html
@@ -44,6 +44,9 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
             </form>
+            <div class="form-group" style="margin-top: 0.5em;">
+                <label><a th:href="@{/login}">Click here to login</a></label>
+            </div>
         </div>
     </body>
 </html>
