--- a/cloudstorage/src/main/resources/templates/result.html
+++ b/cloudstorage/src/main/resources/templates/result.html
@@ -10,25 +10,14 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
-           <!--
-           <div class="alert alert-success fill-parent">
+            <div th:if="${successMsg}" class="alert alert-success fill-parent" >
                 <h1 class="display-5">Success</h1>
-                <span>Your changes were successfully saved. Click <a>here</a> to continue.</span>
+                <span th:text="${successMsg}">Success Message</span>
+                <span>Click <a th:href="@{/home}" th:method="GET">here</a> to continue.</span>
             </div>
-            -->
-            <div th:if="${fileUploadSuccess}" class="alert alert-success fill-parent" >
-                <h1 class="display-5">Success</h1>
-                <span>Your file were successfully uploaded. Click <a th:href="@{/home}" th:method="GET">here</a> to continue.</span>
-            </div>
-            <!--
-            <div class="alert alert-danger fill-parent">
-                <h1 class="display-5">Error</h1>
-                <span>Your changes were not saved. Click <a>here</a> to continue.</span>
-            </div>
-            -->
             <div th:if="${errorMsg}" class="alert alert-danger fill-parent">
                 <h1 class="display-5">Error</h1>
-                <span th:text="${errorMsg}" >Example Error Message</span>
+                <span th:text="${errorMsg}" >Error Message</span>
                 <span>Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
         </div>
